# meta-media-search

./: .dockerignore  .eslintrc.json  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  INTEGRATION_SUMMARY.md  NEXT_STEPS.md  PR_TEMPLATE.md  README.md  docker-compose.yml  package-lock.json  package.json  products.csv  tsconfig.json
.github/workflows/: rust-wasm-ci.yml  wasm-deploy.yml
config/: .env.example
config/rust/: build.yml
config/testing/: ci-pipeline.yml  integration-setup.js  playwright.config.js  rust-test-config.toml  setup-wasm.ts  setup.js  vitest.config.js  vitest.integration.config.js  vitest.performance.config.js  vitest.wasm.config.ts
config/wasm/: mobile-config.toml
coverage/: clover.xml  coverage-final.json  index.html
coverage/.tmp/: coverage-0.json  coverage-1.json  coverage-10.json  coverage-11.json  coverage-12.json  coverage-13.json  coverage-14.json  coverage-15.json  coverage-16.json  coverage-17.json  coverage-18.json  coverage-2.json  coverage-3.json  coverage-4.json  coverage-5.json  coverage-6.json  coverage-7.json  coverage-8.json  coverage-9.json
docs/: ARCHITECTURE.md  CI-CD-PIPELINE.md  GETTING_STARTED.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  RUST_WASM_GUIDE.md  testing-strategy.md
docs/api/: API_DOCUMENTATION.md  README.md
docs/architecture/: 01-system-overview.md  02-component-architecture.md  03-data-models.md  04-api-contracts.md  ARCHITECTURE.md
docs/mobile-wasm/: INTEGRATION_GUIDE.md
docs/research/: api-data-sources-analysis.md  comprehensive-research-analysis.md  user-personas-and-scenarios.md  visual-design-references.md
docs/rust/: integration-strategy.md  system-architecture.md
docs/testing/: TESTING_STRATEGY.md  TEST_COVERAGE_REPORT.md
docs/vector-db/: agentdb-integration.md  data-flow.md  ruvector-research.md
docs/wasm/: module-design.md
rust-wasm/: Cargo.toml  build.sh
rust-wasm/src/: lib.rs
rust-wasm/tests/: vector_ops.rs
scripts/: build-wasm-mobile.sh  build-wasm.sh  optimize-wasm.sh
src/backend/: index.ts  package.json  server.ts  tsconfig.json
src/frontend/: App.tsx  index.html  package.json  service-worker.ts  tsconfig.json  vite.config.ts
src/mobile-wasm/: Cargo.toml  agentdb-bridge.ts  lib.rs  mobile-core.rs  offline-storage.rs
src/personalization/: engine.ts  user-profile.ts
src/rust-wasm/: Cargo.toml  README.md  architecture.toml  build.sh  package.json
src/rust-wasm/.cargo/: config.toml
src/rust-wasm/benches/: vector_search_bench.rs
src/rust-wasm/examples/: basic_search.rs
src/rust-wasm/src/: embeddings.rs  lib.rs  utils.rs  vector_search.rs  wasm_bindings.rs
src/types/: index.ts
src/vector-db/: agentdb-client.ts  embedding-service.ts  ruvector-client.ts
tests/: wasm-browser-tests.spec.ts  wasm-performance.bench.ts
tests/_disabled/: SearchComponent.test.jsx  api.test.js
tests/accessibility/: wcag-compliance.test.js
tests/backend/: search.test.ts
tests/e2e/: user-journey.spec.js
tests/rust/: vector_ops.rs  (+1 more)
(+218 files in other folders)
