[package]
name = "meta-media-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Meta Media Search Team"]
description = "WebAssembly vector operations for media search"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
console_error_panic_hook = "0.1"
ndarray = "0.15"
rayon = "1.8"

[dependencies.web-sys]
version = "0.3"
features = [
  'console',
  'Performance',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.5"
proptest = "1.4"
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"

[[bench]]
name = "vector_ops"
harness = false
