[package]
name = "meta-media-mobile-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Meta Media Team <dev@metamedia.io>"]
description = "Mobile-optimized WASM modules for Meta Media Search"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Storage",
    "IdbFactory",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbTransaction",
    "IdbRequest",
    "DomException",
    "Performance",
    "PerformanceObserver",
    "PerformanceEntry",
    "PerformanceMark",
    "PerformanceMeasure",
] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

# Compression and optimization
lz4 = "1.24"
rmp-serde = "1.1"  # MessagePack for efficient serialization

# Vector operations for search
ndarray = "0.15"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Maximum optimization for size
opt-level = "z"  # Optimize for size
lto = true       # Enable Link Time Optimization
codegen-units = 1
panic = "abort"
strip = true     # Strip symbols

[profile.release.package."*"]
opt-level = "z"
